[project]
name = "logadempirical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "argformat>=0.0.3",
    "cached-property>=2.0.1",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "chardet>=5.2.0",
    "click>=8.3.1",
    "cmake>=4.2.1",
    "colorama>=0.4.6",
    "cycler>=0.12.1",
    "cython>=3.2.4",
    "dataclasses>=0.8",
    "einops>=0.8.1",
    "future>=1.0.0",
    "h5py>=3.15.1",
    "hdbscan>=0.8.41",
    "idna>=3.11",
    "importlib-metadata>=8.7.1",
    "joblib>=1.5.3",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "overrides>=7.7.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pybind11>=3.0.1",
    "pycparser>=2.23",
    "pyparsing>=3.3.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "typing-extensions>=4.15.0",
    "typing-utils>=0.1.0",
    "urllib3>=2.6.3",
    "wincertstore>=0.2.1",
    "zipp>=3.23.0",
]
